removed 48px height from #footer to fix the scrollbar issue

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -836,7 +836,6 @@ a.button:hover {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 48px;
   padding: 0;
   border-top: 1px solid #444;
 }
@@ -845,7 +844,7 @@ a.button:hover {
 /* Bar docked to bottom used for primary app navigation */
 .bar-tab {
   bottom: 0;
-  height: 50px;
+  height: 48px;
   padding: 0;
   background-color: #393939;
   background-image: -webkit-linear-gradient(top, #393939 0, #2b2b2b 100%);
